syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package au.coaas.rwc.proto;

import "SQEMService.proto";

message Empty {}

message RWCResponse {
  string status = 1;
  string body = 2;
}

message MigrationRequest {
  au.coaas.sqem.proto.EdgeDevice destination = 1;
  string providerId = 2;
  string jobId = 3;
  string cs = 4;
  uint64 cpIndex = 5;
  au.coaas.sqem.proto.UpdateEntityRequest ent = 6;
}

service RWCService {
  rpc heartBeat (Empty) returns (RWCResponse);
  rpc getNodeIndex (Empty) returns (RWCResponse);
  rpc hotMigrate (MigrationRequest) returns (RWCResponse);
}


